# mineria_datos

./: README.md  STRUCTURE.md  pyproject.toml
chapters/: 03_crisp_dm.md  04_evaluacion_modelos.md  08_redes_neuronales.qmd  _quarto.yml
tareas/ diego_segon/: tarea_01_clasificacion_digitos.ipynb
